--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,26 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "start:cluster": "node cluster.js",
+    "start:prod": "NODE_ENV=production node cluster.js",
+    "start:single": "NODE_ENV=production node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "mssql": "^11.0.1",
@@ -28,6 +36,7 @@
     "pg": "^8.13.1",
     "qrcode": "^1.5.4",
     "querystring": "^0.2.1",
+    "rate-limit-redis": "^4.2.0",
     "sequelize": "^6.37.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
