--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "qrcode": "^1.5.4",
     "querystring": "^0.2.1",
     "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "vnpay": "^1.6.1"
