--- a/package.json
+++ b/package.json
@@ -10,20 +10,30 @@
     "backend:dev": "npm run dev --prefix backend",
     "backend:start": "npm start --prefix backend",
     "web:dev": "npm run dev --prefix web",
-    "web:build": "npm run build --prefix web", 
+    "web:build": "npm run build --prefix web",
     "symbol:dev": "npm run dev --prefix symbol",
     "symbol:build": "npm run build --prefix symbol",
     "test": "npm test --prefix backend"
   },
-  "keywords": ["math", "game", "education", "mobile", "web"],
+  "keywords": [
+    "math",
+    "game",
+    "education",
+    "mobile",
+    "web"
+  ],
   "author": "Symbol Team",
   "license": "MIT",
   "workspaces": [
     "backend",
-    "web", 
+    "web",
     "symbol"
   ],
   "devDependencies": {
     "concurrently": "^8.0.0"
+  },
+  "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.2",
+    "@react-native-picker/picker": "^2.11.1"
   }
-} 
+}
