--- a/package.json
+++ b/package.json
@@ -32,8 +32,5 @@
   "devDependencies": {
     "concurrently": "^8.0.0"
   },
-  "dependencies": {
-    "@react-native-community/datetimepicker": "^8.4.2",
-    "@react-native-picker/picker": "^2.11.1"
-  }
+  "dependencies": {}
 }
