--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "mssql": "^11.0.1",
+    "multer": "^2.0.1",
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
