--- a/symbol/package.json
+++ b/symbol/package.json
@@ -45,7 +45,9 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "0.20.0",
     "react-native-webview": "13.13.5",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "expo-camera": "~16.1.10",
+    "expo-media-library": "~17.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
