--- a/symbol/package.json
+++ b/symbol/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.9.0",
     "expo": "53.0.13",
     "expo-blur": "14.1.4",
+    "expo-camera": "^16.1.10",
     "expo-constants": "17.1.6",
     "expo-file-system": "^18.1.11",
     "expo-font": "13.3.1",
@@ -28,6 +29,7 @@
     "expo-image": "2.3.0",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "7.1.5",
+    "expo-media-library": "~17.1.7",
     "expo-router": "5.1.1",
     "expo-splash-screen": "0.30.8",
     "expo-status-bar": "2.2.3",
@@ -45,9 +47,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "0.20.0",
     "react-native-webview": "13.13.5",
-    "socket.io-client": "^4.8.1",
-    "expo-camera": "~16.1.10",
-    "expo-media-library": "~17.1.7"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
