--- a/backend/env.example
+++ b/backend/env.example
@@ -5,6 +5,13 @@ DB_USER=symbolgame_user
 DB_PASSWORD=0pnT5thZE8SVn4brRHKsUJXkNkcHpmDX
 DB_NAME=symbolgame
 
+# REDIS CONFIGURATION (for leaderboard caching)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+TIMEZONE=UTC
+
 # CONFIG MAILER 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
