--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "mssql": "^11.0.1",
@@ -36,6 +37,7 @@
     "pg": "^8.13.1",
     "qrcode": "^1.5.4",
     "querystring": "^0.2.1",
+    "redis": "^4.6.10",
     "sequelize": "^6.37.5",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
