--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "mssql": "^11.0.1",
     "multer": "^2.0.1",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
